--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
-# Compiled class file
-*.class
+/public-app/.DS_Store
+/public-app/node_modules
+/public-app/dist
 
-# Log file
-*.log
+/public-app/.env.local
+/public-app/.env.*.local
 
-# BlueJ files
-*.ctxt
+/public-app/npm-debug.log*
+/public-app/yarn-debug.log*
+/public-app/yarn-error.log*
+/public-app/pnpm-debug.log*
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+/public-app/.idea
+/public-app/.vscode
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+/server/build
+/server/target
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
