--- a/public-app/package.json
+++ b/public-app/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "vue": "^3.2.13",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
