--- a/public-app/package.json
+++ b/public-app/package.json
@@ -13,9 +13,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@meforma/vue-toaster": "^1.3.0",
+    "@popperjs/core": "^2.10.2",
+    "@types/leaflet": "^1.5.7",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "leaflet": "^1.6.0",
     "lodash": "^4.17.21",
     "vue": "^3.2.13",
     "vue-router": "^4.0.15",
